apps/penpot/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-backend
  namespace: default
  labels:
    app: penpot-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: penpot-backend
  template:
    metadata:
      labels:
        app: penpot-backend
    spec:
      # Set proper security context for Penpot
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
      # Add init container to fix permissions
      containers:
        - name: penpot-backend
          image: penpotapp/backend:2.13.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6060
          volumeMounts:
            - mountPath: /opt/data/assets
              name: assets-data
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: assets-data
          persistentVolumeClaim:
            claimName: penpot-assets-data
