apps/penpot/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-exporter
  namespace: default
  labels:
    app: penpot-exporter
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: penpot-exporter
  template:
    metadata:
      labels:
        app: penpot-exporter
    spec:
      containers:
        - name: penpot-exporter
          image: penpotapp/exporter:2.13.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6061
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
