apps/penpot/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-frontend
  namespace: default
  labels:
    app: penpot-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: penpot-frontend
  template:
    metadata:
      labels:
        app: penpot-frontend
    spec:
      containers:
        - name: penpot-frontend
          image: penpotapp/frontend:2.13.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
