apps/penpot/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-postgres
  namespace: default
  labels:
    app: penpot-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: penpot-postgres
  template:
    metadata:
      labels:
        app: penpot-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - penpot
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - penpot
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: penpot-postgres-data
