apps/penpot/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-redis
  namespace: default
  labels:
    app: penpot-redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: penpot-redis
  template:
    metadata:
      labels:
        app: penpot-redis
    spec:
      containers:
        - name: redis
          image: redis:8.6.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
