apps/penpot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penpot-ingress
  namespace: default
spec:
  ingressClassName: private
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: penpot.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penpot-frontend
                port:
                  number: 80
